      of another filename.  (Closes: #818727)
    + Handle trailing spaces on the watch line when determining whether the
      line specifies the version to check.  (Closes: #818865)
    + xip → xpi in the manpage.  (Closes: #819106)

  [ Paul Wise ]
  * Update chdist bash-completion file with the architectures currently
    (as of 2016-04-02) listed on buildd.debian.org

 -- James McCoy <jamessan@debian.org>  Sun, 20 Mar 2016 12:26:04 -0400

devscripts (2.16.2) unstable; urgency=medium

  [ Osamu Aoki ]
  * uscan:
    + Print proper warnings for bad rules.  Closes: #814049
    + Fix glitches around rules such as "s<...> <...>g" and add their
      tests.
    + Reactivate --no-verbose mode.  Closes: #815645 
    + Fix --destdir for version 4.  Closes:#814686
    + Always use uscan_warn and uscan_die.
    + Die if the action script fails.  Closes: #810976
  * test_uscan:
    + Fix non-{Debian,Ubuntu} cases.  Closes: #816645
  * debsnap:
    + Add --list option.  Closes: #610048, #679763, #816910
  * manpage-alert:
    + Show package name etc.  Closes: #497320
  * bts:
    + Fail if --sendmail is broken.  Closes: #809318

  [ Dominique Dumont ]
  * licensecheck:
    + parse (c) owner with email like info@foo.com

  [ James McCoy ]
  * debsnap:
    + Only make the destination directory if there is something to download.
      (Closes: #816022)
    + Add --first & --last options to define a range of versions to download.
      Based on a patch by Ivo De Decker.  (Closes: #675867)
  * uscan:
    + Fix typo in dirversionmangle help.  (Closes: #816231)
  * grep-excuses:
    + Report excuses even when autoremoval info isn't reachable.  (Closes:
      #816723)
  * Replace references to debbindiff with diffoscope.  (Closes: #818299)
  * Declare compliance with policy 3.9.7, no changes required.

  [ Johannes Schauer ]
  * build-rdeps:
    + Generate correct dependency for cross builds.  Closes: #794538
    + Improve dependency resolver using dose3.  Closes: #797858
