@@ -11,6 +11,7 @@ devscripts (2.16.3) UNRELEASED; urgency=medium
   [ Paul Wise ]
   * Update chdist bash-completion file with the architectures currently
     (as of 2016-04-02) listed on buildd.debian.org
+  * Support xz compressed files in dd-list
 
  -- James McCoy <jamessan@debian.org>  Sun, 20 Mar 2016 12:26:04 -0400
 
